# ai-agent-project-example

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
api/v1/: router.py  service.py
api/v1/schemas/: request.py  response.py
config/: settings.py  thresholds.yaml
config/apis/: endpoints.yaml  keys_template.yaml
config/prompts/: planner_prompt.txt
docs/: agentic rag workflow.avif
postman/: AI-Assistant.postman_collection.json
src/agents/: agent.py  langchain_agent.py  tools.py
src/llm/: openai_interface.py
src/model/: fine_tune.py
src/pipeline/: ingest.py  postprocess.py  preprocess.py
src/utils/: helpers.py
tests/: conftest.py  test_agents.py  test_ingest.py
